finished Contributions Timeline

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="carousel-container">
                     <h2 class="animate__animated animate__fadeInDown">Refining Code Critics</h2>
                     <h3 class="animate__animated animate__fadeInDown text-light">Pharo Consortium</h3>
-                    <p class="animate__animated animate__fadeInUp">Code critics are super important while developing software systems.
+                    <p class="animate__animated animate__fadeInUp">Code critiques are super important while developing software systems.
                          They help developers to find source code sections which code quality is subject of analysis while they are writing or
                           reading code.</p>
                     <a href="https://summerofcode.withgoogle.com/projects/?sp-search=Alejandra%20Cossio#6095801345900544" target="_blank" class="btn-get-started animate__animated animate__fadeInUp">See the GSOC
@@ -160,7 +160,7 @@
                         </div>
                         <div class="timeline-body">
                             <p>I created my own repository named <a href="https://github.com/AleCossioCh/Tool-CritiqueBrowser" target="_blank">Tool-CritiqueBrowser</a> to do migration and then work on improvements. The following image is one of the classes
-                                in the package Tool-CriticBrowser witch inherits from the deprecated ComposablePresenter.
+                                in the package Tool-CriticBrowser which inherits from the deprecated ComposablePresenter.
                             </p>
                             <hr>
                             <div class="col-lg-12 col-md-12 portfolio portfolio-wrap filter-app">
@@ -188,8 +188,10 @@
                         </p>
                         </div>
                         <div class="timeline-body">
-                            <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis
-                                quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                            <p> I've updated the user interface for selecting packages and rules. 
+                                This to make it more intuitive for anyone who wants to use it.
+                                Some examples in detail are in the <a href="portfolio.html" target="_blank"> enhancements section</a>.
+                                </p>
                                 <hr>
                                 <div class="col-lg-12 col-md-12 portfolio portfolio-wrap filter-app">
                                     <div class="portfolio-item">
@@ -211,12 +213,13 @@
                     <div class="timeline-panel">
                         <div class="timeline-heading">
                             <h4 class="timeline-title">Work package 3 — Enhancing code critiques global browser</h4>
-                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> Refining Critic Browser for ① quality rules and ② rule's critics</small>
+                            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> Refining Critic Browser for ① quality rules and ② rule's critiques</small>
                         </p>
                         </div>
                         <div class="timeline-body">
-                            <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis
-                                quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                            <p> I improved the flow of the tool to make it more intuitive for anyone who wants to use it. 
+                                These changes are notable mainly in ① quality rules and ② rule critiques.
+                                Some examples in detail are in the <a href="portfolio.html" target="_blank"> enhancements section</a>.</p>
                                 <hr>
                                 <div class="col-lg-12 col-md-12 portfolio portfolio-wrap filter-app">
                                     <div class="portfolio-item">
@@ -241,8 +244,10 @@
                             <h4 class="timeline-title">Work package 4 - Enhancing changes browser.</h4>
                         </div>
                         <div class="timeline-body">
-                            <p>I created my own repository named <a href="https://github.com/AleCossioCh/Tool-CritiqueBrowser" target="_blank">Tool-CritiqueBrowser</a> to do migration and then work on improvements. The following image is one of the classes
-                                in the package Tool-CriticBrowser witch inherits from the deprecated ComposablePresenter.
+                            <p>
+                                I've improved the Changes Browser view. This view is called when a critique has the 
+                                "automatically resolve this issue" option. The new version has the option to show the changes
+                                in unified view and split view.
                             </p>
                             <hr>
                             <div class="col-lg-12 col-md-12 portfolio portfolio-wrap filter-app">
@@ -266,11 +271,11 @@
                     <div class="timeline-badge info"><i class="bi bi-check"></i></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <h4 class="timeline-title">Work package 5 - Integrate the tool in Pharo10.</h4>
+                            <h4 class="timeline-title">Work package 5 - New version of Critic Browser and Changes Browser in Pharo10!</h4>
                         </div>
                         <div class="timeline-body">
-                            <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis
-                                quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                            <p>The new version brings many improvements in user interface and implementation. 
+                                All of these are summarized in <a href="https://github.com/pharo-project/pharo/pull/9773" target="_blank">issue #9773</a>.</p>
                         </div>
                     </div>
                 </li>
@@ -358,7 +363,6 @@
             </div>
             <!-- End Future work Section -->
 
-           
         </section>
 
     </main>
