--- a/team.html
+++ b/team.html
@@ -174,19 +174,19 @@
                 <div class="section-title">
                     <h2>Acknowledgements</h2>
                     <p data-aos="fade-up">
-                        <a href="#" onClick="return false;"><span
-                                title="CriticBrowser is a graphical tool that allows developers to select a list of software packages and a list of quality rules This resulting on a new list of critiques that broke the selected rules.">CriticBrowser</span>
-                        </a> uses a deprecated version of <a href="https://github.com/pharo-spec/Spec" target="_blank"><span
-                                title="Spec is a framework in Pharo for describing user interfaces">Spec</span></a>. Therefore, implementing the new enhancements directly was not feasible without first migrating the CriticBrowser to the Spec2 version;
-                        I created my own repository to do the migrations as Pharo10 was in release at the moment.
+                        I wanna thank my incredible mentors: Evelyn Cusi, Nour Jihene  and Juan Pablo Sandoval. 
+                        Thanks for your immense knowledge, feedback, enthusiasm and for the time that was put into the project and myself.
+                    </p>   
+                    <br>
+                    <p data-aos="fade-up">
+                        Thanks to all in the active Pharo community for helping me with my doubts in discord;
+                         Specially to Sebastian Jordan, Daniel Aparicio and Markus Denker since they helped me at the 
+                         beginning and throughout the progress in the project. I really appreciate your help.
                     </p>
                     <br>
                     <p data-aos="fade-up">
-                        Accordingly this, ‘building, test, and integrate profiles’ project goal was replaced by CriticBrowser migration.
-                    </p>
-                    <br>
-                    <p data-aos="fade-up">
-                        After these changes, the rest of project goals was done.
+                        Finally I'd like to thank the GSoC staff and Google for the opportunity in being part of 
+                        this program this year. I really enjoyed and learned a lot this coding summer! Thank you!
                     </p>
                 </div>
             </div>
