--- a/portfolio.html
+++ b/portfolio.html
@@ -90,11 +90,11 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-wrap filter-app">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/portfolio1.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h3>App 1</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                                    <a href="assets/img/portfolio/portfolio1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
@@ -103,11 +103,11 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-wrap filter-web">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/portfolio2.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h3>Web 3</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                                    <a href="assets/img/portfolio/portfolio2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
@@ -116,11 +116,11 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-wrap filter-app">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/portfolio3.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h3>App 2</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                                    <a href="assets/img/portfolio/portfolio3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
@@ -129,11 +129,11 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-wrap filter-card">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/portfolio4.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h3>Card 2</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                                    <a href="assets/img/portfolio/portfolio4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
@@ -142,11 +142,11 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-wrap filter-web">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/portfolio5.jpeg" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h3>Web 2</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                                    <a href="assets/img/portfolio/portfolio5.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
@@ -155,11 +155,11 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-wrap filter-app">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/portfolio6.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h3>App 3</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                                    <a href="assets/img/portfolio/portfolio6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
@@ -168,11 +168,11 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-wrap filter-card">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/portfolio7.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h3>Card 1</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                                    <a href="assets/img/portfolio/portfolio7.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
@@ -181,11 +181,11 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-wrap filter-card">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/portfolio8.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h3>Card 3</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+                                    <a href="assets/img/portfolio/portfolio8.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
@@ -194,11 +194,37 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-wrap filter-web">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/portfolio9.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h3>Web 1</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
+                                    <a href="assets/img/portfolio/portfolio9.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
+                                    <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 portfolio-wrap filter-web">
+                        <div class="portfolio-item">
+                            <img src="assets/img/portfolio/portfolio10.png" class="img-fluid" alt="">
+                            <div class="portfolio-info">
+                                <h3>Web 1</h3>
+                                <div>
+                                    <a href="assets/img/portfolio/portfolio10.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
+                                    <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 portfolio-wrap filter-web">
+                        <div class="portfolio-item">
+                            <img src="assets/img/portfolio/portfolio11.jpeg" class="img-fluid" alt="">
+                            <div class="portfolio-info">
+                                <h3>Web 1</h3>
+                                <div>
+                                    <a href="assets/img/portfolio/portfolio11.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
