--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio - Moderna Bootstrap Template</title>
+    <title>Google Summer Of Code 21</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -43,9 +43,9 @@
         <div class="container d-flex justify-content-between align-items-center">
 
             <div class="logo">
-                <h1 class="text-light"><a href="index.html"><span>Moderna</span></a></h1>
+                <!-- <h1 class="text-light"><a href="index.html"><span>Google Summer Of Code 21</span></a></h1>-->
                 <!-- Uncomment below if you prefer to use an image logo -->
-                <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+                <a href="index.html"><img src="assets/img/logoG.png" alt="" class="img-fluid"></a>
             </div>
 
             <nav id="navbar" class="navbar">
