--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Team - Moderna Bootstrap Template</title>
+    <title>Google Summer Of Code 21</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -43,9 +43,9 @@
         <div class="container d-flex justify-content-between align-items-center">
 
             <div class="logo">
-                <h1 class="text-light"><a href="index.html"><span>Moderna</span></a></h1>
+                <!-- <h1 class="text-light"><a href="index.html"><span>Google Summer Of Code 21</span></a></h1>-->
                 <!-- Uncomment below if you prefer to use an image logo -->
-                <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+                <a href="index.html"><img src="assets/img/logoG.png" alt="" class="img-fluid"></a>
             </div>
 
             <nav id="navbar" class="navbar">
@@ -102,8 +102,8 @@
                             <div class="member-info">
                                 <h4>Alejandra Cossío Chavalier</h4>
                                 <span>STUDENT</span>
-                                <p>Animi est delectus alias quam repellendus nihil nobis dolor. Est sapiente occaecati et dolore. Omnis aut ut nesciunt explicabo qui. Eius nam deleniti ut omnis repudiandae perferendis qui. Neque non quidem sit sed pariatur
-                                    quia modi ea occaecati. Incidunt ea non est corporis in.</p>
+                                <p>The student worked on her open source project proposal 
+                                    for 10 weeks in collaboration with their mentors.</p>
                             </div>
                         </div>
                     </div>
@@ -186,7 +186,7 @@
                     <br>
                     <p data-aos="fade-up">
                         Finally I'd like to thank the GSoC staff and Google for the opportunity in being part of 
-                        this program this year. I really enjoyed and learned a lot this coding summer! Thank you!
+                        this program this year. I really enjoyed and learned a lot this coding summer! Thank you a lot!
                     </p>
                 </div>
             </div>
