--- a/changesBrowser.html
+++ b/changesBrowser.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Services - Moderna Bootstrap Template</title>
+    <title>Google Summer Of Code 21</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -43,9 +43,9 @@
         <div class="container d-flex justify-content-between align-items-center">
 
             <div class="logo">
-                <h1 class="text-light"><a href="index.html"><span>Moderna</span></a></h1>
+                <!-- <h1 class="text-light"><a href="index.html"><span>Google Summer Of Code 21</span></a></h1>-->
                 <!-- Uncomment below if you prefer to use an image logo -->
-                <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+                <a href="index.html"><img src="assets/img/logoG.png" alt="" class="img-fluid"></a>
             </div>
 
             <nav id="navbar" class="navbar">
@@ -89,7 +89,6 @@
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title"><a href="#">1. How to open Changes Browser from Nautilius </a></h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
                                 <div class='row'>
                                     <div class='col-sm-2'></div>
                                     <div class='col-sm-8'>
@@ -105,7 +104,21 @@
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title"><a href="#">2. How to open Changes Browser from Critic Browser</a></h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                                <div class='row'>
+                                    <div class='col-sm-2'></div>
+                                    <div class='col-sm-8'>
+                                        <div class="embed-responsive embed-responsive-16by9 col-xs-12 text-center">
+                                            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/nkXGohB02V0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 d-flex align-items-stretch" data-aos="fade-up">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title"><a href="#">3. Selecting a diff view to show changes before transform</a></h5>
                                 <div class='row'>
                                     <div class='col-sm-2'></div>
                                     <div class='col-sm-8'>
