--- a/criticBrowser.html
+++ b/criticBrowser.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Services - Moderna Bootstrap Template</title>
+    <title>Google Summer Of Code 21</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -43,9 +43,9 @@
         <div class="container d-flex justify-content-between align-items-center">
 
             <div class="logo">
-                <h1 class="text-light"><a href="index.html"><span>Moderna</span></a></h1>
+                <!-- <h1 class="text-light"><a href="index.html"><span>Google Summer Of Code 21</span></a></h1>-->
                 <!-- Uncomment below if you prefer to use an image logo -->
-                <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+                <a href="index.html"><img src="assets/img/logoG.png" alt="" class="img-fluid"></a>
             </div>
 
             <nav id="navbar" class="navbar">
@@ -90,7 +90,11 @@
                             <div class="card-body">
                                 <h5 class="card-title"><a href="#">1. How to open
                                 </a></h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                                <p class="card-text">There are three ways to open Critic Browser: </p>
+                                <p class="card-text">① Open from a package and selecting all quality rules in the system by default. 
+                                     </p>
+                                <p class="card-text">② Open to select one or many packages from menu.</p>
+                                <p class="card-text">③ Open from the last configuration.</p>
                                 <div class='row'>
                                     <div class='col-sm-2'></div>
                                     <div class='col-sm-8'>
@@ -102,11 +106,12 @@
                             </div>
                         </div>
                     </div>
+                    
                     <div class="col-md-12 d-flex align-items-stretch" data-aos="fade-up">
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title"><a href="#">2. How to set configure</a></h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                                <p class="card-text">Selecting a list of software packages and a list of quality rules, this resulting on a new list of critiques that broke the selected rules. </p>
                                 <div class='row'>
                                     <div class='col-sm-2'></div>
                                     <div class='col-sm-8'>
@@ -123,7 +128,10 @@
                             <div class="card-body">
                                 <h5 class="card-title"><a href="#">3. How to use
                                 </a></h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                                <p class="card-text">There are three options to select on a critique</p>
+                                <p class="card-text">① Mark as wrong: If the selected critique is a false positive, mark as wrong it will delete the critique from the cache and it will be no more displayed.</p>
+                                <p class="card-text">② Transform: If the selected critique has the transform option, transform it will resolve automatically the critique.</p>
+                                <p class="card-text">③ Mark as To-Do: this option will mark the critique as a To-Do critique, as a reminder that it's necessary to fix later.</p>
                                 <div class='row'>
                                     <div class='col-sm-2'></div>
                                     <div class='col-sm-8'>
