--- a/portfolio.html
+++ b/portfolio.html
@@ -92,10 +92,9 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio/portfolio1.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h3>App 1</h3>
+                                <h3>Image 1</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    <a href="assets/img/portfolio/portfolio1.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -105,10 +104,9 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio/portfolio2.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h3>Web 3</h3>
+                                <h3>Image 2</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    <a href="assets/img/portfolio/portfolio2.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -118,10 +116,9 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio/portfolio3.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h3>App 2</h3>
+                                <h3>Image 3</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    <a href="assets/img/portfolio/portfolio3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -131,10 +128,9 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio/portfolio4.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h3>Card 2</h3>
+                                <h3>Image 4</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    <a href="assets/img/portfolio/portfolio4.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -144,10 +140,9 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio/portfolio5.jpeg" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h3>Web 2</h3>
+                                <h3>Image 5</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio5.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    <a href="assets/img/portfolio/portfolio5.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -157,10 +152,9 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio/portfolio6.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h3>App 3</h3>
+                                <h3>Image 6</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    <a href="assets/img/portfolio/portfolio6.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -170,10 +164,9 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio/portfolio7.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h3>Card 1</h3>
+                                <h3>Image 7</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio7.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    <a href="assets/img/portfolio/portfolio7.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -183,10 +176,9 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio/portfolio8.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h3>Card 3</h3>
+                                <h3>Image 8</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio8.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    <a href="assets/img/portfolio/portfolio8.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -196,10 +188,9 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio/portfolio9.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h3>Web 1</h3>
+                                <h3>Image 9</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio9.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    <a href="assets/img/portfolio/portfolio9.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -209,10 +200,9 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio/portfolio10.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h3>Web 1</h3>
+                                <h3>Image 10</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio10.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    <a href="assets/img/portfolio/portfolio10.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -222,10 +212,9 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio/portfolio11.jpeg" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h3>Web 1</h3>
+                                <h3>Image 11</h3>
                                 <div>
-                                    <a href="assets/img/portfolio/portfolio11.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    <a href="assets/img/portfolio/portfolio11.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                                 </div>
                             </div>
                         </div>
